写了两个功能

--- a/src/style/best.scss
+++ b/src/style/best.scss
@@ -27,7 +27,7 @@ body, div, dl, dt, dd, form,  img, ol, ul, li, table, th, td, p, span, a {
   }
   
   body {
-    font-family: Tahoma, Arial, Helvetica, "宋体";
+    font-family: Tahoma, Arial, Helvetica, "微软雅黑";
     font-size: 12px;
     text-align: center;
     background: #fff;
@@ -90,7 +90,6 @@ body, div, dl, dt, dd, form,  img, ol, ul, li, table, th, td, p, span, a {
   
   a:hover, a:active {
     text-decoration: underline;
-    color: $taobao-color;
   }
   
   i {
