--- a/src/style/css.scss
+++ b/src/style/css.scss
@@ -3,8 +3,8 @@
     margin:0 auto;
 }
 /*header*/
-header{
-    height: 24px;
+#header{
+    height: 111px;
     border-bottom: 1px solid #ccc;
     background:#F1F1F1;
     .erweima{
@@ -54,6 +54,7 @@ header{
             width: 74px;
             height: 24px;
             line-height: 24px;
+            z-index: 999;
             span{
                 background:url("../resource/img/sprite_v140304.png") 0px -25px no-repeat;
                 width: 6px;
@@ -62,6 +63,7 @@ header{
                 margin-right:8px;
             }
             div{
+                background: #fff;
                 position: absolute;
                 right:71px;
                 width: 130px;
@@ -176,6 +178,319 @@ header{
             line-height: 16px;
             border-right: 1px solid #ccc;
             margin-top: 4px;
+        }
+    }
+    .header_top_main{
+        background: #fff;
+        width: 100%;
+        height: 87px;
+    }
+    .top_main{
+        height: 70px;
+        h1{
+            margin-top: 10px;
+        }
+        .search{
+            margin-left: 46px;
+            width: 440px;
+            height: 58px;
+            margin-top: 20px;
+            input:nth-of-type(1){
+                width: 339px;
+                height: 30px;
+                border: 1px solid #f60;
+                float: left;
+                text-indent: 8px;
+                outline:none;
+            }
+            input:nth-of-type(2){
+                width:100px;
+                height: 30px;
+                background: #f60;
+                float: left;
+                font-size: 18px;
+                color: #ffffff;
+                cursor: pointer;
+            }
+            ul{
+                float: left;
+                margin-top: 10px;
+                width: 100%;
+            }
+            li{
+                float: left;
+                width: 80px;
+                text-align:center;
+                border-right: 1px solid #ccc;
+            }
+            li:last-child{
+                border-right: none;  
+            }
+            a{
+                color: #767676;
+            }
+        }
+    }
+
+}
+/*nav*/
+#nav{
+    height: 41px;
+    background: #10286c;
+    ul.l{
+        text-align: center;
+        li:nth-child(1){
+            width: 180px;
+            text-align: center;
+            background:#f60;
+            margin-right: 10px;
+        }
+        li:nth-child(1):hover{
+            background:#f60;
+        }
+        li{
+            display: inline-block;
+            width: 100px;
+            height:41px;
+            line-height: 41px; 
+            text-align: center; 
+            a{
+                display:inline-block;
+                font-size: 16px;
+                color: #fff;
+               
+                height: 100%;
+                text-align: center;
+            }
+        }
+        li:hover{
+            background:#5877eb;
+        }
+    }
+}
+/*banner*/
+#banner{
+    height: 505px;
+    ul.l{
+        width: 180px;
+        height: 448px;
+        border: 2px solid #f60;
+        .li_1{
+            width: 178px;
+            height: 70px;
+            border-bottom: 1px solid #ccc;
+            .li_1_p1{
+                height: 36px;
+                line-height: 36px;
+                font-size: 14px;
+                text-align: left;
+                font-weight: 700;
+                span:nth-of-type(1){
+                    display: inline-block;
+                    width: 15px;
+                    height: 15px;
+                    background:url(../resource/img/banner_sprit.png) 0px 3px no-repeat;
+                    margin-top: 14px;
+                }
+                a:last-child{
+                    margin-left:25px;
+                    color: #ccc;
+                }
+            }
+            .li_1_p2{
+                height: 36px;
+                line-height: 36px;
+                font-size: 12px;
+                text-align: left;
+                text-indent: 19px;
+                a{
+                    color: #aaa;
+                }
+                a:nth-child(1){
+                    color: #f60;
+                } 
+                a:nth-child(3){
+                    color: #f60;
+                } 
+            }
+        }
+        .li_2{
+            width: 178px;
+            height: 98px;
+            border-bottom: 1px solid #ccc;
+            .li_2_p1{
+                height: 33px;
+                line-height: 33px;
+                font-size: 14px;
+                text-align: left;
+                font-weight: 700;
+                padding-left: 3px;
+                span:nth-of-type(1){
+                    display: inline-block;
+                    width: 15px;
+                    height: 15px;
+                    background:url(../resource/img/banner_sprit.png) 0px -18px no-repeat;
+                    margin-top: 14px;
+                }
+                a:last-child{
+                    margin-left:25px;
+                    color: #ccc;
+                }
+            }
+            .li_2_p2{
+                height: 33px;
+                line-height: 33px;
+                font-size: 12px;
+                text-align: left;
+                text-indent: 19px;
+                margin-top: 5px;
+                a{
+                    color: #aaa;
+                }
+                a:nth-child(2){
+                    color: #f60;
+                } 
+                a:nth-child(3){
+                color: #f60;
+                } 
+            }
+            .li_2_p3{
+                height: 20px;
+                font-size: 12px;
+                text-align: left;
+                text-indent: 19px;
+                a{
+                    color: #aaa;
+                }
+            }
+        }
+        .li_3{
+            width: 178px;
+            height: 98px;
+            border-bottom: 1px solid #ccc;
+            .li_3_p1{
+                height: 33px;
+                line-height: 33px;
+                font-size: 14px;
+                text-align: left;
+                font-weight: 700;
+                padding-left: 3px;
+                span:nth-of-type(1){
+                    display: inline-block;
+                    width: 15px;
+                    height: 15px;
+                    background:url(../resource/img/banner_sprit.png) 0px -42px no-repeat;
+                    margin-top: 14px;
+                }
+                a:last-child{
+                    margin-left:59px;
+                    color: #ccc;
+                }
+            }
+            .li_3_p2{
+                height: 33px;
+                line-height: 33px;
+                font-size: 12px;
+                text-align: left;
+                text-indent: 19px;
+                margin-top: 5px;
+                a{
+                    color: #aaa;
+                }
+                a:nth-child(3){
+                color: #f60;
+                } 
+            }
+            .li_3_p3{
+                height: 20px;
+                font-size: 12px;
+                text-align: left;
+                text-indent: 19px;
+                a{
+                    color: #aaa;
+                }
+            }
+        }
+        .li_4{
+            width: 178px;
+            .li_4_p1{
+                height: 33px;
+                line-height: 33px;
+                font-size: 14px;
+                text-align: left;
+                font-weight: 700;
+                padding-left: 3px;
+                span:nth-of-type(1){
+                    display: inline-block;
+                    width: 15px;
+                    height: 15px;
+                    background:url(../resource/img/banner_sprit.png) 0px -82px no-repeat;
+                    margin-top: 14px;
+                }
+                a:last-child{
+                    margin-left:59px;
+                    color: #ccc;
+                }
+            }
+            .li_4_p2{
+                height: 26px;
+                line-height: 26px;
+                font-size: 12px;
+                text-align: left;
+                text-indent: 19px;
+                margin-top: 5px;
+                a{
+                    color: #aaa;
+                }
+                a:nth-child(1){
+                color: #f60;
+                padding-right: 6px;
+                } 
+            }
+            .li_4_p3{
+                height: 26px;
+                line-height:26px;
+                font-size: 12px;
+                text-align: left;
+                text-indent: 19px;
+                a{
+                    color: #aaa;
+                    padding-right: 6px;
+                }
+            }
+            .li_4_p4{
+                height: 26px;
+                line-height:26px;
+                font-size: 12px;
+                text-align: left;
+                text-indent: 19px;
+                a{
+                    color: #aaa;
+                    padding-right: 6px;
+                }
+            }
+            .li_4_p5{
+                height: 26px;
+                line-height:26px;
+                font-size: 12px;
+                text-align: left;
+                text-indent: 19px;
+                a{
+                    color: #aaa;
+                    padding-right: 6px;
+                }
+            }
+            .li_4_p6{
+                height: 26px;
+                line-height:26px;
+                font-size: 12px;
+                text-align: left;
+                text-indent: 19px;
+                a{
+                    color: #aaa;
+                    padding-right: 6px;
+                }
+            }
         }
     }
 }
