完事好多了，还差淘宝轮播图了

--- a/src/style/css.scss
+++ b/src/style/css.scss
@@ -702,7 +702,12 @@
                 line-height: 45px;
                 width: 100%;
                 span{
+                    font-size: 16px;
+                }
+                span:last-child{
                     font-size: 18px;
+                    color: #f60;
+                    display: block;
                 }
             }
             ul{
@@ -726,41 +731,448 @@
         float: right;
         width: 230px;
         height: 473px;
-        position: relative;
-        ul.jingdong_list{
-            list-style: none;
+        ul.r{
+            margin-top: 12px;
+        }
+        div.r{
             position: relative;
-            li{
-                position:absolute;
-                opacity: 0;
-                transition: all 1s; 
+            width: 232px;
+            height: 244px;
+            margin-top: 10px;
+            ul.jingdong_2_list{
+                position: relative;
+                li{
+                    position:absolute;
+                    opacity: 0;
+                    transition: all 1s; 
+                }
+                .jingdong_2_current{
+                    opacity: 1;
+                    z-index: 2;
+                }
             }
-            .jingdong_current{
-                opacity: 1;
+            ul.jingdong_2_circle{
+                width: 200px;
+                height: 20px;
+                list-style: none;
+                position: absolute;
+                left: 0px;
+                bottom: 221px;
                 z-index: 2;
+                li{
+                    float: left;
+                    width: 10px;
+                    height: 10px;
+                    line-height: 30px;
+                    border-radius: 50%;
+                    margin-left:8px;
+                    background:#737373; 
+                    cursor: pointer;   
+                }
+                .jingdong_2_focus{
+                    border-radius: 50%;
+                    background:#f60;     
+                }
             }
         }
-        // ul.jingdong_circle{
-        //     width: 200px;
-        //     height: 20px;
-        //     list-style: none;
-        //     position: absolute;
-        //     left: 570px;
-        //     bottom: -231px;
-        //     z-index: 2;
-        //     li{
-        //         float: left;
-        //         width: 30px;
-        //         height: 30px;
-        //         line-height: 30px;
-        //         border-radius: 50%;
-        //         margin-left:8px;
-        //         background:#737373; 
-        //         cursor: pointer;   
-        //     }
-            .jingdong_focus{
-                border-radius: 50%;
-                background:#f60;     
+    }
+}
+#main{
+    .hot{
+        .hot_left{
+            float: left;
+            width: 960px;
+            height: 280px;
+            position: relative;
+            margin-top: 40px;
+            .hot_p1{
+                float: left;
+                height: 45px;
+                line-height: 45px;
+                width: 100%;
+                border-bottom: 3px solid #f60;
+                span:nth-of-type(1){
+                    font-size:20px;
+                    color: #f60;
+                    font-weight: bold;
+                }
+                span:nth-of-type(2){
+                    font-size: 12px;
+                    color: #ccc;
+                }
+            }
+            ul{
+                position: absolute;
+                top: 45px;
+                margin-top: 25px;
+                li{
+                    float: left;
+                    margin-left:30px; 
+                    img{
+                        display: block;
+                    }
+                    p{
+                        width: 209px;
+                        line-height: 18px;
+                    }
+                }
+            }
+        }
+        .hot_right{
+            width: 223px;
+            height: 260px;
+            margin-right: 5px;
+           .hot_right_top{
+                width: 234px;
+                height: 125px;
+                background: #F6F6F6;
+                color: #f60;
+                font-size: 20px;
+                p{
+                    border-bottom: 1px dashed #aaa;
+                }
+            } 
+            img{
+                margin-top: 20px;
+            }
+        }
+    }
+    .good{
+        height: 312px;
+        width: 100%;
+        float: left;
+        .good_p1{
+            height: 45px;
+            line-height: 45px;
+            width: 100%;
+            border-bottom: 3px solid #f60;
+            span:nth-of-type(1){
+                font-size:20px;
+                color: #f60;
+                font-weight: bold;
+            }
+            span:nth-of-type(2){
+                font-size: 12px;
+                color: #ccc;
+            }
+        }
+        .good_img{
+            width: 100%;
+            height: 278px;
+            border: 1px solid #ccc;
+            ul {
+                width: 100%px;
+                height: 278px;
+                .li_1{
+                    width: 658px;
+                    height: 278px;
+                    p{
+                        height: 278px;
+                        width: 300px;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
+                        font-size: 12px;
+                        line-height: 20px;
+                        color: #aaa;
+                    }
+                }
+                li {
+                    width: 180px;
+                    height: 278px;
+                    float: left;
+                    overflow: hidden;
+                    padding: 0 20px;
+                    cursor: pointer;
+                    box-shadow: 2px 2px 2px #aaa,
+                                3px 3px 3px #ccc;
+                                
+                    img{
+                        float: left;
+                    }
+                    p {
+                        line-height:16px;
+                        text-align: justify;
+                        height:50px;
+                        overflow: hidden;
+                        width: 177px;
+                        float: right;
+                        font-size: 12px;
+                        line-height: 20px;
+                        color: #aaa;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
+                        transition: all .5s;
+                    }
+                }
+            }
+            ul:hover li {
+                width:180px;
+            }
+            ul:hover li:hover {
+                width: 658px;
+            }
+            ul:hover li:hover p {
+                height: 278px;
+                width: 300px;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                font-size: 12px;
+                line-height: 20px;
+                color: #aaa;
+            }
+        }
+        
+    }
+    .like{
+        width: 100%;
+        height: 269px;
+        border:1px solid #ccc;
+        float: left;
+        margin-top: 50px;
+        img.r{
+            width: 238px;
+            height: 269px;
+        }
+        ul{
+            width: 960px;
+            height: 269px;
+            li.fff{
+                background: #fff;
+            }
+            .li{
+                width: 240px;
+                height: 31px;
+                background:#ccc;
+                float: left;
+                font-size: 14px;
+                line-height: 31px;
+                cursor: pointer;
+                .ul_none_1{
+                    li{
+                        width: 155px;
+                        height: 189px;
+                        float: left;
+                        margin-top: 23px;
+                        margin-left: 24px;
+                       p{
+                            line-height: 14px;
+                            font-size: 12px;
+                            color: #999;
+                            margin-top: 10px;
+                            span{
+                                color: #f60;
+                                display: block;
+                                font-size: 18px;
+                                margin-top: 6px;
+                            }
+                       }
+                    }
+                }
+                .ul_none_2{
+                    display: none;
+                    margin-left: -240px;
+                    li{
+                        width: 155px;
+                        height: 189px;
+                        float: left;
+                        margin-top: 23px;
+                        margin-left: 24px;
+                       p{
+                            line-height: 14px;
+                            font-size: 12px;
+                            color: #999;
+                            margin-top: 10px;
+                            span{
+                                color: #f60;
+                                display: block;
+                                font-size: 18px;
+                                margin-top: 6px;
+                            }
+                       }
+                    }
+                }
+                .ul_none_3{
+                    display: none;
+                    margin-left: -480px;
+                    li{
+                        width: 155px;
+                        height: 189px;
+                        float: left;
+                        margin-top: 23px;
+                        margin-left: 24px;
+                       p{
+                            line-height: 14px;
+                            font-size: 12px;
+                            color: #999;
+                            margin-top: 10px;
+                            span{
+                                color: #f60;
+                                display: block;
+                                font-size: 18px;
+                                margin-top: 6px;
+                            }
+                       }
+                    }
+                }
+                .ul_none_4{
+                    display: none;
+                    margin-left: -720px;
+                    li{
+                        width: 155px;
+                        height: 189px;
+                        float: left;
+                        margin-top: 23px;
+                        margin-left: 24px;
+                       p{
+                            line-height: 14px;
+                            font-size: 12px;
+                            color: #999;
+                            margin-top: 10px;
+                            span{
+                                color: #f60;
+                                display: block;
+                                font-size: 18px;
+                                margin-top: 6px;
+                            }
+                       }
+                    }
+                }
+            }
+        }
+    }
+    .phone{
+        width: 100%;
+        height: 505px;
+        float: left;
+        margin-top: 30px;
+        .phone_left{
+            width: 961px;
+            height: 100%;
+            h2{
+                height: 42px;
+                text-align: left;
+                font-size: 20px;
+                color: #2565BD;
+                font-weight: bold;
+                border-top: 1px solid #ccc;
+                border-bottom:3px solid #2565BD;
+            }
+            div{
+                width: 100%;
+                height: 462px;
+                border-left: 1px solid #aaa;
+                border-right: 1px solid #aaa;
+                border-bottom : 1px solid #aaa;
+                .phone_left_top{
+                    height: 207px;
+                    li{
+                        float: left;
+                        width: 200px;
+                        height: 207px;
+                        font-size: 12px;
+                        line-height: 20px;
+                        margin-left: 13px;
+                        margin-right: 13px;
+                        margin-top: 20px;
+                        p{
+                            margin-top: 10px;
+                            text-align: left;
+                            span{
+                                display: block;
+                                color: #f60;
+                                font-size: 16px;
+                                margin-top: 5px;
+                                text-align: left;
+                            }
+                        }
+                    }
+                    .phone_left_top_li2{
+                        width: 480px;
+                        margin-top: 0px;
+                    }
+                }
+                .phone_left_center{
+                    height: 206px;
+                    li{
+                        float: left;
+                        width: 200px;
+                        height: 207px;
+                        font-size: 12px;
+                        line-height: 20px;
+                        margin-left: 15px;
+                        margin-right: 15px;
+                        p{
+                            margin-top: 10px;
+                            text-align: left;
+                            span{
+                                display: block;
+                                color: #f60;
+                                font-size: 16px;
+                                margin-top: 5px;
+                                text-align: left;
+                            }
+                        }
+                    }
+                    .phone_left_top_li2{
+                        width: 480px;
+                        margin-top: 0px;
+                    }
+                }
+                .phone_left_bottom{
+                    height: 55px;
+                    border-top: 1px solid #aaa;
+                    img{
+                        height: 50px;
+                        width: 100%;
+                        margin-top: -20px;
+                    }
+                }
+            }
+        }
+        .phone_right{
+            width: 230px;
+            height: 100%;
+            border: 1px solid #ccc;
+            .phone_right_top{
+                height: 34px;
+                li{
+                    float: left;
+                    width: 55px;
+                    height: 25px;
+                    line-height: 25px;
+                    border: 1px solid #ccc;
+                    margin-right: 3px;
+                    font-size: 13px;
+                }
+                li:last-child{
+                    a{
+                         color: #f60;
+                    }
+                   
+                }
+            }
+            .phone_right_center{
+                height: 372px;
+                li{
+                    font-size: 14px;
+                    text-align: left;
+                    height: 94px;
+                    border-bottom: 1px solid #aaa;
+                    span{
+                        color: #f60;
+                        display: block;
+                        text-align: left;
+                    }
+                    img{
+                        float: left;
+                        width: 90px;
+                        height: 80px;
+                    }
+                    p{
+                        float: right;
+                        width: 126px;
+                    }
+                }
             }
         }
     }
