--- a/src/style/singin.scss
+++ b/src/style/singin.scss
@@ -197,7 +197,7 @@
   input:nth-of-type(2){
     width: 134px;
     border: 1px solid #aaa;
-    margin-top: 30px;
+    margin-top: 90px;
     margin-left: 400px;
     background: #F9F9F9;
   }
@@ -206,32 +206,46 @@
     font-size: 14px;
     color: #333;
     float: left;
-    margin-top: 35px;
+    margin-top: 94px;
     margin-left: 308px;
   }
   img:nth-of-type(2){
     float: left;
-    margin-top: -32px;
+    margin-top: -31px;
     margin-left: 547px;
+    cursor: pointer;
   }
   input:nth-of-type(3){
     width: 257px;
     border: 1px solid #aaa;
-    margin-top: 30px;
+    margin-top: 26px;
     margin-left: 401px;
-    text-align: center;
+    text-align: left;
+    text-indent: 82px;
     height: 34px;
     line-height: 34px;
     background: #E1E1E1;
     cursor: pointer;
+    font-size:14px;
+    letter-spacing: 50px;
+  }
+  input:nth-of-type(4){
+    border: 1px solid #aaa;
+    margin-top: -154px;
+    margin-left: 400px;
+    width: 257px;
+    background: #F9F9F9;
+  }
+  span:nth-of-type(3){
+    letter-spacing: 3px;
+    font-size: 14px;
+    color: #333;
+    float: left;
+    margin-top: -148px;
+    margin-left: 357px;
+
   }
 }
-
-
-
-
-
-
   #footer{
     height: 204px;
     div.w{
